# bigbrain

./: .gitignore  .gitmodules  README.md  concepts.md  context.md  devenv.nix  prototype.md  pyproject.toml  requirements.txt  run_app.sh
brain/core/: __init__.py  __main__.py  agent.py  brain.py  schemas.py  steward.py  workflow.py
brain/llm/: decomposer.py  prompts.py
data/: memory.json
examples/: basic_usage.py  task_decomposition.py
examples/app/: librarian_context.json  planner_context.json
examples/app/backend/: agent_definition.json  agent_history.json
examples/app/frontend/: agent_definition.json  agent_history.json
gemini-run/: README.md  app.py  devenv.nix  langgraph.json  requirements.txt
metabrain/: README.md  project_def.md
metabrain/core/: brain.py  interfaces.py  memory.py  workflow.py
src/: complex_example.py  example.py  supabase.py
tests/: test_decomposer.py
treebrain/: treebrain_context.txt
treebrain-jl/: requirements.txt
treebrain-jl/forest-vision-dashboard/backend/datasets/: contents.txt
treebrain-jl/src/: main.py
treebrain/agents/: __init__.py  action_agent.py  backend_agent.py  frontend_agent.py  implementation_agent.py  librarian.py  planner.py
treebrain/core/: interfaces.py  orchestrator.py
treebrain/examples/: basic_usage.py
